# iptv-nintendo-switch

./: .env  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: switch.cmake
resources/: application.json
src/: animations.c  animations.h  categories.c  categories.h  category_blocker.c  category_blocker.h  category_filter.c  category_filter.h  constants.h  drawing.c  drawing.h  epg.c  epg.h  grid_view.c  keyboard.c  keyboard.h  main.c  network.c  network.h  nxgamepad.c  nxgamepad.h  parser.c  parser.h  player.c  player.h  playlist.c  playlist.h  profile.h  search.c  search.h  search_history.c  state.h  thumbnails.c  ui.c  ui.cpp  ui.h  ui_constants.h  ui_draw.c  ui_input.c
